[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UnitManager.gd" type="Script" id=1]
[ext_resource path="res://Sounds/Deselect.wav" type="AudioStream" id=2]

[node name="UnitManager" type="Node2D" groups=[
"manager",
]]
script = ExtResource( 1 )

[node name="tempButton" type="Button" parent="."]
visible = false
margin_right = 171.645
margin_bottom = 20.0
text = "SPAWN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="Yes" type="Button" parent="Camera2D/CanvasLayer"]
visible = false
margin_left = 11.708
margin_top = 41.2706
margin_right = 49.708
margin_bottom = 61.2706
rect_scale = Vector2( 3.10404, 2.3066 )
text = "Yes"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Camera2D/CanvasLayer"]
visible = false
margin_left = 170.159
margin_top = 42.0444
margin_right = 211.159
margin_bottom = 62.0444
rect_scale = Vector2( 3.10404, 2.3066 )
text = "Nah!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Camera2D/CanvasLayer"]
visible = false
margin_left = 17.3812
margin_top = 6.25061
margin_right = 57.3812
margin_bottom = 20.2506
rect_scale = Vector2( 2.29833, 2.27239 )
text = "Quit?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deselect" type="AudioStreamPlayer" parent="." groups=[
"sound",
]]
stream = ExtResource( 2 )
[connection signal="pressed" from="tempButton" to="." method="_on_tempButton_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Camera2D/CanvasLayer/No" to="." method="_on_No_pressed"]
